# Project_Sustainable_Food_Supply_Chain

./: .env  .gitignore  Dockerfile  README.md  app_launcher.py  docker-compose.yml  main.py  package-lock.json  setup_hardhat.ps1  setup_hardhat.sh  start_blockchain.py
off_chain/: .gitignore  CompanyMenu.py  Dockerfile  (+8 more)
on_chain/: .env-example  .env-template  .gitignore  .solhint.json  Dockerfile  README.md  automated_deployment.py  contract-addresses.json  contract_addresses.json  contract_addresses_backup_20250516_121230.json  contract_addresses_backup_20250516_172224.json  contract_addresses_backup_20250517_153036.json  contract_addresses_backup_20250517_153046.json  contract_addresses_backup_20250517_153430.json  contract_addresses_backup_20250517_153546.json  deploy_contract.py  ethers_bridge.js  hardhat.config.js  hardhat_deployment.py  interact_contract.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup_ganache.py  startup.py  truffle-config.js
on_chain/artifacts/contracts/CO2Token.sol/: CO2Token.json
on_chain/artifacts/contracts/OperationRegistry.sol/: OperationRegistry.json
on_chain/blockchain/: SFSContract.sol
on_chain/blockchain/contracts/: ProductRequest.sol
on_chain/cache/: solidity-files-cache.json
on_chain/contracts/: Counter.sol  ProductRequest.sol  SimpleCounter.sol  SupplyChainCO2.sol  SustainableFoodSupplyChain.sol
on_chain/controller/: blockchain_controller.py  blockchain_facede.py
on_chain/migrations/: 1_initial_migration.js  2_deploy_counter.js
on_chain/scripts/: deploy.js
on_chain/test/: CO2Token.test.js
(+117 files in other folders)
