[tool.poetry]
name = "on-chain-module"
version = "0.1.0"
description = "On-Chain module for smart contract management"
authors = ["Catalina Quispe"]
package-mode = false
requires-python = ">=3.13"

[tool.poetry.dependencies]
python = ">=3.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
